--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.homeContainer {
+/* .homeContainer {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -30,4 +30,4 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
-
+ */
