--- a/styles/Item.module.css
+++ b/styles/Item.module.css
@@ -46,3 +46,18 @@
     width: 30px;
     height: 30px;
 }
+
+@media only screen and (max-width: 720px) {
+    .container {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .innerContainer {
+        flex-direction: column;
+    }
+
+    .inc {
+        flex-direction: column;
+    }
+}
