--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -1,25 +1,25 @@
 /* Tab section at top */
-.tabSection {
+/* .tabSection {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row;
     width: 100%;
     height: 40px;
-}
+} */
 
 /* Display the menu */
-.menu {
+/* .menu {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     width: 100%;
     height: calc(80vh - 40px);
-}
+} */
 
 /* Menu lists */
-.list {
+/* .list {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,14 +30,14 @@
     border-radius: 10px;
     margin-bottom: 5px;
     cursor: pointer;
-}
+} */
 
-.listItemName {
+/* .listItemName {
     padding: 2.5%;
     margin-left: 10%;
-}
+} */
 
-.listItemPrice {
+/* .listItemPrice {
     padding: 2.5%;
     margin-right: 10%;
-}
+} */
